--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-             android:layout_height="match_parent"
-             tools:context=".activity.main.fragment.search.SearchFragment">
+              android:layout_height="match_parent"
+              tools:context=".activity.main.fragment.search.SearchFragment">
     <EditText
             android:id="@+id/search_bar"
             android:layout_marginTop="8dp"
@@ -14,6 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"/>
 
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager">
+
+    </android.support.v7.widget.RecyclerView>
     <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -25,17 +33,11 @@
                 android:orientation="vertical"
                 android:nestedScrollingEnabled="false"
                 >
-            <TextView
-                    android:text="상황별"
-                    android:textColor="#000000"
-                    android:textSize="20sp"
-                    android:lineSpacingExtra="9sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/ly_station"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
             <TextView
                     android:id="@+id/btn_more_station"
@@ -47,34 +49,7 @@
                     android:lineSpacingExtra="6sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="9dp"
-                    android:background="#9e9e9f"/>
-            <TextView
-                    android:text="장르별"
-                    android:textColor="#000000"
-                    android:textSize="20sp"
-                    android:layout_marginTop="28.3dp"
-                    android:lineSpacingExtra="9sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/ly_genre"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-            </android.support.v7.widget.RecyclerView>
-            <TextView
-                    android:id="@+id/btn_more_genre"
-                    android:text="전체보기"
-                    android:textSize="12sp"
-                    android:textColor="#666666"
-                    android:layout_marginTop="6.8dp"
-                    android:layout_marginLeft="304.8dp"
-                    android:lineSpacingExtra="6sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
