--- a/app/src/main/res/layout/fragment_liked.xml
+++ b/app/src/main/res/layout/fragment_liked.xml
@@ -12,16 +12,47 @@
     R.id.recycler_view(li_concert*)
 
     -->
+
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:textColor="#000000"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="48dp"
             android:lineSpacingExtra="12sp"
-            tools:text="찜 목록"
-            android:text="찜 목록"/>
+            tools:text="관심 목록"
+            android:text="관심 목록"/>
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <TextView
+                android:id="@+id/btn_liked_artist"
+                android:text="아티스트"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/btn_liked_concert"
+                android:text="공연"
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/btn_liked_theme"
+                android:text="테마"
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <TextView
+            android:id="@+id/btn_edit"
+            android:text="편집하기"
+            android:textSize="12sp"
+            android:textColor="#000000"
+            android:layout_marginLeft="300dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     <View android:layout_width="match_parent" android:layout_height="1dp"
           android:background="#dbdcdc"
     />
