--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
+              android:orientation="vertical"
                 android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                 tools:context=".activity.main.fragment.search.SearchResultFragment">
-
-    <android.support.v4.widget.NestedScrollView
+    <EditText
+            android:id="@+id/search_bar"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="#b4b4b5"
             android:layout_width="match_parent"
+            android:layout_height="35dp"/>
+    <android.support.v4.widget.NestedScrollView
+            android:id="@+id/search_result"
+            android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="match_parent">
         <LinearLayout
                 android:layout_marginLeft="16dp"
@@ -86,4 +96,20 @@
 
 
     </android.support.v4.widget.NestedScrollView>
-</RelativeLayout>
+    <LinearLayout
+            android:id="@+id/search_result_fail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:orientation="vertical">
+        <TextView
+                android:text="'아무말'에 대한 검색 결과가 없습니다'"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:text="'아무말..' 아티스트/콘서트 추가요청하기"
+                android:background="#b4b4b5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+</LinearLayout>
