--- a/app/src/main/res/layout/content_header.xml
+++ b/app/src/main/res/layout/content_header.xml
@@ -76,7 +76,9 @@
         </LinearLayout>
 
         <!--have to fix it-->
-        <ImageView
+        <View
+                android:id="@+id/youtude"
+                class="com.google.android.youtube.player.YouTubePlayerView"
                 android:layout_width="326.7dp"
                 android:layout_height="184.7dp"
                 android:layout_below="@+id/iv_back"
