--- a/app/src/main/res/layout/item_ellipsis.xml
+++ b/app/src/main/res/layout/item_ellipsis.xml
@@ -2,15 +2,16 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="0.5dp"
+        android:layout_height="9dp"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"
+        android:gravity="top"
         >
     <TextView
             android:id="@+id/tv_ellipsis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="..."
+            android:gravity="top"
+            android:textSize="11sp"
+            android:text="ººº"
     />
 </LinearLayout>
