2018/12/26  Artist ListAdapter와 ConcertListAdaper를 Basic ListAdapter로 병합하고 ListData, BasicLiseViewHolder의 Interface추가

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -54,6 +54,7 @@
             </android.support.v7.widget.RecyclerView>
             <TextView
                     android:text="전체보기"
+                    android:id="@+id/btn_more"
                     android:textSize="12sp"
                     android:textColor="#666666"
                     android:layout_marginTop="6.8dp"
