--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -65,12 +65,11 @@
     </LinearLayout>
 
 
-    <GridView
-            android:layout_marginTop="10dp"
-            android:id="@+id/gv_calendar"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:numColumns="7"
-    />
+    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+    android:id="@+id/recycler_view_calendar"
+    >
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
