--- a/app/src/main/res/layout/li_calendar_date.xml
+++ b/app/src/main/res/layout/li_calendar_date.xml
@@ -3,7 +3,7 @@
         android:background="#fafafa"
         android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         xmlns:tools="http://schemas.android.com/tools">
     <TextView android:layout_width="wrap_content"
