--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".activities.main.fragment.NotificationFragment"
+             tools:context=".activities.main.fragment.calendar.NotificationFragment"
             android:orientation="vertical">
     <TextView
             android:layout_width="wrap_content"
