--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
               android:orientation="vertical"
-              android:layout_height="match_parent"
-              tools:context=".activity.main.fragment.search.SearchFragment">
+                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+                tools:context=".activity.main.fragment.search.SearchResultFragment">
     <EditText
             android:id="@+id/search_bar"
             android:layout_marginTop="8dp"
@@ -13,17 +13,10 @@
             android:background="#b4b4b5"
             android:layout_width="match_parent"
             android:layout_height="35dp"/>
-
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager">
-
-    </android.support.v7.widget.RecyclerView>
     <android.support.v4.widget.NestedScrollView
+            android:id="@+id/search_result"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="match_parent">
         <LinearLayout
                 android:layout_marginLeft="16dp"
@@ -31,26 +24,92 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:nestedScrollingEnabled="false"
+                android:nestedScrollingEnabled="false">
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                        >
+                <TextView
+                        android:text="아티스트"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        android:lineSpacingExtra="9sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/ly_artist_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 >
+                </android.support.v7.widget.RecyclerView>
+                <TextView
+                        android:id="@+id/btn_more_artist"
+                        android:text="전체보기"
+                        android:textSize="12sp"
+                        android:textColor="#666666"
+                        android:layout_marginTop="6.8dp"
+                        android:layout_marginLeft="304.8dp"
+                        android:lineSpacingExtra="6sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="9dp"
+                        android:background="#9e9e9f"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                            >
+                <TextView
+                        android:text="콘서트"
+                        android:textColor="#000000"
+                        android:textSize="20sp"
+                        android:lineSpacingExtra="9sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/ly_concert_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
 
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/ly_station"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-            </android.support.v7.widget.RecyclerView>
-            <TextView
-                    android:id="@+id/btn_more_station"
-                    android:text="전체보기"
-                    android:textSize="12sp"
-                    android:textColor="#666666"
-                    android:layout_marginTop="6.8dp"
-                    android:layout_marginLeft="304.8dp"
-                    android:lineSpacingExtra="6sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
+                >
+                </android.support.v7.widget.RecyclerView>
+                <TextView
+                        android:id="@+id/btn_more_list"
+                        android:text="전체보기"
+                        android:textSize="12sp"
+                        android:textColor="#666666"
+                        android:layout_marginTop="6.8dp"
+                        android:layout_marginStart="304.8dp"
+                        android:lineSpacingExtra="6sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
 
         </LinearLayout>
+
+
     </android.support.v4.widget.NestedScrollView>
+    <LinearLayout
+            android:id="@+id/search_result_fail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:orientation="vertical">
+        <TextView
+                android:text="'아무말'에 대한 검색 결과가 없습니다'"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:text="'아무말..' 아티스트/콘서트 추가요청하기"
+                android:background="#b4b4b5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
