--- a/app/src/main/res/layout/fragment_explorer.xml
+++ b/app/src/main/res/layout/fragment_explorer.xml
@@ -4,7 +4,8 @@
               android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_height="match_parent"
-              tools:context=".activities.main.fragment.search.SearchFragment">
+              tools:context=".activities.main.fragment.search.ExplorerFragment">
+
     <EditText
             android:id="@+id/search_bar"
             android:layout_marginTop="8dp"
