--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
               android:orientation="vertical"
                 android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-                tools:context=".activity.main.fragment.search.SearchResultFragment">
+                tools:context=".activity.main.fragment.search.SearchFragment">
     <EditText
             android:id="@+id/search_bar"
             android:layout_marginTop="8dp"
