--- a/app/src/main/res/layout/fragment_liked.xml
+++ b/app/src/main/res/layout/fragment_liked.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:padding="16dp"
-              tools:context=".activity.main.fragment.liked.LikedFragment"
+              tools:context=".activities.main.fragment.liked.LikedFragment"
               android:orientation="vertical">
 
     <!--
@@ -58,9 +58,10 @@
     />
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyler_view"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
     />
 
 
