2018/12/27 뷰작업+콘서트세부쪽 그건 수정되었길래 아직 안함

--- a/app/src/main/res/layout/fragment_explorer.xml
+++ b/app/src/main/res/layout/fragment_explorer.xml
@@ -4,19 +4,20 @@
               android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_height="match_parent"
+              android:layout_marginHorizontal="16dp"
               tools:context=".activities.main.fragment.search.ExplorerFragment">
 
     <EditText
             android:id="@+id/search_bar"
             android:layout_marginTop="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+
             android:background="#b4b4b5"
             android:layout_width="match_parent"
             android:layout_height="35dp"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_horizontal"
+            android:layout_marginTop="25dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -24,11 +25,11 @@
 
     </android.support.v7.widget.RecyclerView>
     <android.support.v4.widget.NestedScrollView
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
