--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,13 +19,13 @@
             android:visibility="gone"
             android:layout_height="match_parent">
         <LinearLayout
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:nestedScrollingEnabled="false">
             <LinearLayout
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -66,6 +66,7 @@
                     android:orientation="vertical"
                             >
                 <TextView
+                        android:layout_marginTop="20dp"
                         android:text="콘서트"
                         android:textColor="#000000"
                         android:textSize="20sp"
@@ -97,16 +98,19 @@
 
     </android.support.v4.widget.NestedScrollView>
     <LinearLayout
+            android:layout_marginVertical="200dp"
             android:id="@+id/search_result_fail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
             android:orientation="vertical">
         <TextView
+                android:layout_gravity="center"
                 android:text="'아무말'에 대한 검색 결과가 없습니다'"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <TextView
+                android:layout_gravity="center"
                 android:text="'아무말..' 아티스트/콘서트 추가요청하기"
                 android:background="#b4b4b5"
                 android:layout_width="wrap_content"
