--- a/app/src/main/res/layout/content_concert.xml
+++ b/app/src/main/res/layout/content_concert.xml
@@ -46,6 +46,7 @@
                     android:id="@+id/recycler_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="14dp"
                     android:orientation="horizontal"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 
