--- a/app/src/main/res/layout/fragment_liked.xml
+++ b/app/src/main/res/layout/fragment_liked.xml
@@ -24,40 +24,35 @@
             android:text="관심 목록"/>
 
     <LinearLayout
+            android:layout_marginTop="15dp"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <TextView
                 android:id="@+id/btn_liked_artist"
                 android:text="아티스트"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        <TextView
-                android:id="@+id/btn_liked_concert"
-                android:text="공연"
-                android:layout_marginLeft="20dp"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <TextView
                 android:id="@+id/btn_liked_theme"
                 android:text="테마"
+                android:textSize="20sp"
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/btn_liked_concert"
+                android:text="공연"
+                android:textSize="20sp"
                 android:layout_marginLeft="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
-    <TextView
-            android:id="@+id/btn_edit"
-            android:text="편집하기"
-            android:textSize="12sp"
-            android:textColor="#000000"
-            android:layout_marginLeft="300dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    <View android:layout_width="match_parent" android:layout_height="1dp"
-          android:background="#dbdcdc"
-    />
+
 
     <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="5dp"
             android:id="@+id/recyler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
