--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -6,12 +6,28 @@
              tools:context=".activities.main.fragment.mypage.MyPageFragment">
 
         <LinearLayout
-                android:layout_marginTop="2dp"
-                android:layout_marginLeft="15.7dp"
-                android:layout_marginRight="15.7dp"
+                android:layout_marginHorizontal="16dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+            <LinearLayout
+                    android:layout_marginTop="25dp"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:text="마이페이지"
+                        android:textSize="24dp"
+                        android:textColor="#000000"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                <ImageView
+                        android:layout_marginLeft="170dp"
+                        android:src="@drawable/ic_account_circle"
+                        android:layout_width="46dp"
+                        android:layout_height="46dp"/>
+            </LinearLayout>
+
 
             <TextView
                     android:text="내 티켓"
@@ -19,15 +35,10 @@
                     android:textColor="#010101"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="9dp"
-                    android:background="#9e9e9f"/>
 
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view_ticket"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -40,14 +51,9 @@
                     android:textColor="#010101"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="9dp"
-                    android:background="#9e9e9f"/>
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view_pay"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
