--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -8,121 +8,150 @@
 
     <TextView
             android:text="설정"
-            android:textSize="17sp"
-            android:textColor="#010101"
+            android:textSize="24sp"
+            android:textColor="#000000"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginBottom="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <LinearLayout
             android:background="#f2f2f2"
             android:layout_width="match_parent"
+            android:paddingHorizontal="16dp"
+            android:weightSum="10"
             android:layout_height="72dp">
         <ImageView
-                android:layout_weight="1"
+                android:layout_marginVertical="13dp"
+                android:layout_marginRight="26dp"
                 android:src="@drawable/ic_account_circle"
-
                 android:layout_width="46dp"
                 android:layout_height="46dp"/>
         <TextView
-
-                android:layout_weight="5"
+                android:layout_weight="9"
+                android:layout_marginVertical="23dp"
                 android:text="푸시알림설정"
+                android:textSize="17sp"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <ImageView
-                android:layout_weight="1"
+                android:layout_marginVertical="20dp"
                 android:src="@drawable/ic_account_circle"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
     </LinearLayout>
     <LinearLayout
             android:background="#f2f2f2"
+            android:layout_marginTop="1dp"
+            android:paddingHorizontal="16dp"
+            android:weightSum="10"
             android:layout_width="match_parent"
             android:layout_height="72dp">
         <ImageView
-                android:layout_weight="1"
+                android:layout_marginRight="26dp"
+                android:layout_marginVertical="13dp"
                 android:src="@drawable/ic_account_circle"
-
                 android:layout_width="46dp"
                 android:layout_height="46dp"/>
         <TextView
-
-                android:layout_weight="5"
-                android:text="캘린더설정"
+                android:layout_weight="9"
+                android:layout_marginVertical="23dp"
+                android:text="공지사항"
+                android:textSize="17sp"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <ImageView
-                android:layout_weight="1"
+
+                android:layout_marginVertical="20dp"
                 android:src="@drawable/ic_account_circle"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
     </LinearLayout>
-
     <LinearLayout
+            android:layout_marginTop="60dp"
             android:background="#f2f2f2"
+            android:paddingHorizontal="16dp"
+            android:weightSum="10"
             android:layout_width="match_parent"
             android:layout_height="72dp">
         <ImageView
-                android:layout_weight="1"
+                android:layout_marginRight="26dp"
+                android:layout_marginVertical="13dp"
                 android:src="@drawable/ic_account_circle"
-
                 android:layout_width="46dp"
                 android:layout_height="46dp"/>
         <TextView
-
-                android:layout_weight="5"
+                android:layout_weight="9"
+                android:layout_marginVertical="23dp"
                 android:text="문의/건의하기"
+                android:textSize="17sp"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <ImageView
-                android:layout_weight="1"
+
+                android:layout_marginVertical="20dp"
                 android:src="@drawable/ic_account_circle"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
     </LinearLayout>
     <LinearLayout
-            android:background="#f2f2f2"
-            android:layout_width="match_parent"
-            android:layout_height="72dp">
-        <ImageView
-                android:layout_weight="1"
-                android:src="@drawable/ic_account_circle"
+        android:layout_marginTop="1dp"
+        android:background="#f2f2f2"
+        android:paddingHorizontal="16dp"
+        android:weightSum="10"
+        android:layout_width="match_parent"
+        android:layout_height="72dp">
+    <ImageView
+            android:layout_marginRight="26dp"
+            android:layout_marginVertical="13dp"
+            android:src="@drawable/ic_account_circle"
+            android:layout_width="46dp"
+            android:layout_height="46dp"/>
+    <TextView
+            android:layout_weight="9"
+            android:layout_marginVertical="23dp"
+            android:text="서비스 이용약관"
+            android:textSize="17sp"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    <ImageView
 
-                android:layout_width="46dp"
-                android:layout_height="46dp"/>
-        <TextView
-
-                android:layout_weight="5"
-                android:text="서비스 이용약관"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        <ImageView
-                android:layout_weight="1"
-                android:src="@drawable/ic_account_circle"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-    </LinearLayout>
+            android:layout_marginVertical="20dp"
+            android:src="@drawable/ic_account_circle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+</LinearLayout>
     <LinearLayout
+            android:layout_marginTop="1dp"
             android:background="#f2f2f2"
+            android:paddingHorizontal="16dp"
+            android:weightSum="10"
             android:layout_width="match_parent"
             android:layout_height="72dp">
         <ImageView
-                android:layout_weight="1"
+                android:layout_marginRight="26dp"
+                android:layout_marginVertical="13dp"
                 android:src="@drawable/ic_account_circle"
-
                 android:layout_width="46dp"
                 android:layout_height="46dp"/>
         <TextView
-
-                android:layout_weight="5"
+                android:layout_weight="9"
+                android:layout_marginVertical="23dp"
                 android:text="공연 기획자"
+                android:textSize="17sp"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <ImageView
-                android:layout_weight="1"
+
+                android:layout_marginVertical="20dp"
                 android:src="@drawable/ic_account_circle"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
     </LinearLayout>
-
 </LinearLayout>
