--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -3,12 +3,14 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:orientation="vertical"
+              android:layout_marginHorizontal="16dp"
               android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
               tools:context=".activities.main.fragment.mypage.ticket.TicketFragment">
     <TextView
             android:text="티켓"
-            android:textSize="17sp"
-            android:textColor="#010101"
+            android:textSize="24sp"
+            android:textColor="#000000"
+            android:layout_marginVertical="25dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
