--- a/app/src/main/res/layout/fragment_ticket_list.xml
+++ b/app/src/main/res/layout/fragment_ticket_list.xml
@@ -2,18 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               tools:context=".activities.main.fragment.mypage.ticket.TicketListFragment">
     <TextView
             android:text="티켓"
-            android:textSize="17sp"
-            android:textColor="#010101"
+            android:textSize="24sp"
+            android:textColor="#000000"
+            android:layout_marginLeft="17dp"
+            android:layout_marginVertical="25dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_ticket_list"
             android:orientation="vertical"
+            android:layout_marginHorizontal="16dp"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
