--- a/app/src/main/res/layout/li_alarm.xml
+++ b/app/src/main/res/layout/li_alarm.xml
@@ -2,28 +2,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:background="#f2f2f2"
                 android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="72dp">
     <LinearLayout 
             android:orientation="horizontal"
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content">
         <ImageView
                 android:id="@+id/item_alarm_img"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="11dp"
                 android:src="@drawable/ic_account_circle"
                 android:layout_width="50dp"
                 android:layout_height="50dp"/>
         <LinearLayout
                 android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             <TextView
                     android:id="@+id/item_alarm_title"
                     android:text="더 몬스터 콘서트"
+                    android:textSize="15sp"
+                    android:textColor="#000000"
+                    android:lineSpacingExtra="7sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             <TextView
                     android:id="@+id/item_alarm_date"
                     android:text="#12월 25일"
+                    android:textColor="#666666"
+                    android:textSize="12sp"
+                    android:lineSpacingExtra="2sp"
+                    android:layout_marginTop="2dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
         </LinearLayout>
