--- a/app/src/main/res/layout/li_artist.xml
+++ b/app/src/main/res/layout/li_artist.xml
@@ -7,7 +7,7 @@
             android:layout_width="match_parent"
             android:layout_centerVertical="true"
             android:layout_height="wrap_content"
-            android:layout_marginTop="13.6dp"
+            android:layout_marginVertical="20dp"
             android:orientation="horizontal">
         <ImageView
                 android:id="@+id/iv_artist"
@@ -29,13 +29,14 @@
                         android:textColor="#000000"
                         android:text="지코"
                         android:layout_width="wrap_content"
-                        android:layout_height="22dp"/>
+                        android:layout_height="wrap_content"/>
                 <TextView
                         android:id="@+id/tv_artist_tag"
                         android:textSize="12sp"
+                        android:textColor="#666666"
                         android:text="#힙합 #어쩌고"
                         android:layout_width="wrap_content"
-                        android:layout_height="18dp"/>
+                        android:layout_height="wrap_content"/>
             </LinearLayout>
             <ImageView
                     android:id="@+id/btn_follow"
