--- a/app/src/main/res/layout/li_artist_thumb.xml
+++ b/app/src/main/res/layout/li_artist_thumb.xml
@@ -4,6 +4,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
+            android:layout_marginHorizontal="9dp"
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content">
 
@@ -20,8 +21,10 @@
                     android:layout_below="@id/iv_artist"
                     android:textColor="#000000"
                     android:textSize="12sp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
                     android:layout_width="wrap_content"
-                    android:layout_height="18dp"/>
+                    android:layout_height="wrap_content"/>
     </RelativeLayout>
 
 </RelativeLayout>
