--- a/app/src/main/res/layout/li_tag.xml
+++ b/app/src/main/res/layout/li_tag.xml
@@ -4,10 +4,13 @@
                 android:layout_height="wrap_content">
     <TextView
             android:text="모두"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:lineSpacingExtra="2sp"
             android:id="@+id/tv_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:layout_marginLeft="2dp"
+            />
 
 </RelativeLayout>
