--- a/app/src/main/res/layout/li_ticket.xml
+++ b/app/src/main/res/layout/li_ticket.xml
@@ -5,6 +5,9 @@
     <LinearLayout
             android:orientation="horizontal"
             android:weightSum="10"
+            android:layout_marginBottom="31dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginTop="28dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <LinearLayout
@@ -18,6 +21,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             <LinearLayout
+                    android:layout_marginTop="18dp"
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
@@ -33,6 +37,7 @@
             </LinearLayout>
             <LinearLayout
                     android:orientation="horizontal"
+                    android:layout_marginTop="0.3dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 <TextView
