--- a/app/src/main/res/layout/fragment_liked.xml
+++ b/app/src/main/res/layout/fragment_liked.xml
@@ -53,7 +53,7 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_marginTop="5dp"
-            android:id="@+id/recyler_view"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
