2018/12/27 aadded underline in horizontalView

--- a/app/src/main/res/layout/li_tag.xml
+++ b/app/src/main/res/layout/li_tag.xml
@@ -2,15 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-    <TextView
-            android:text="모두"
-            android:textSize="17sp"
-            android:lineSpacingExtra="2sp"
-            android:id="@+id/tv_text"
+    <LinearLayout 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_marginLeft="2dp"
-            />
+            android:orientation="vertical">
+
+        <TextView
+                android:text="모두"
+                android:textSize="17sp"
+                android:lineSpacingExtra="2sp"
+                android:id="@+id/tv_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:layout_marginLeft="2dp"
+        />
+        
+        <View
+                android:id="@+id/v_underline"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:visibility="invisible"
+                android:background="#b4b4b5"
+                android:layout_marginTop="4.6dp"/>
+
+        
+    </LinearLayout>
 
 </RelativeLayout>
